Show current humidity

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ h1 {
   border-radius: 15px;
 }
 
-.readings p {
+.large {
   color: rgb(12, 120, 170);
   font-size: 75px;
   font-family: 'Times New Roman';
